Version 2.02.89 - 
==================================
  Fix missing thread list manipulation protection in dmeventd.
  Do not derefence lv pointer in _percent_run() function before NULL check.
  Allow empty strings for description and creation_host config fields.
  Issue deprecation warning when removing last lvm1-format snapshot.
  Reinstate support for snapshot removal with lvm1 format. (2.02.86)
  Add policy based automated repair of RAID logical volumes
  Don't allow two images to be split and tracked from a RAID LV at one time
  Don't allow size change of RAID LV that is tracking changes for a split image
  Don't allow size change of RAID sub-LVs independently
  Don't allow name change of RAID LV that is tracking changes for a split image
  Do not allow users to change the name of RAID sub-LVs independently
  Do not allow users to change permissions on RAID sub-LVs
  Support the ability to replace specific devices in a RAID array via lvconvert.
  Add activation/use_linear_target enabled by default.
  Use gcc warning options only with .c to .o compilation.
  Move y/n prompts to stderr and repeat if response has both 'n' and 'y'.
  Replace the unit testing framework with CUnit (--enable-testing).
  Fix dmeventd snapshot monitoring when multiple extensions were involved.
  Don't ignore configure --mandir and --infodir.
  Drop pool memory allocated within lv_has_target_type().
  Reduce stack allocation of some PATH_MAX sized char buffers.
  Unlock memory before writing metadata.
  Add query before removing snapshots when inactive snapshot origin is removed.
  Allow changing availability state of snapshots.
  Skip non-virtual snapshots for availability change for lvchange with vg name.
  Adjusted mirror region size only for mirrors and raids.
  Reorder prompt conditions for removal of active volumes.
  Avoid 'mda inconsistency' by properly registering UNLABELLED_PV flag (2.02.86)
  Fix --enable-static_link unless using --enable-dmeventd / --enable-udev_sync.